Created GsModels and SnGroups for each bender model
added models and sngroups for bender head, torso, arms, legs

--- a/sigapp/vs2017/sigapp.vcxproj
+++ b/sigapp/vs2017/sigapp.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="..\src\my_viewer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\bender.h" />
     <ClInclude Include="..\src\my_viewer.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
