Added bushes.h as well as GsModels and SnGroups for 9 bush models

--- a/sigapp/vs2017/sigapp.vcxproj
+++ b/sigapp/vs2017/sigapp.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\bender.h" />
+    <ClInclude Include="..\src\bushes.h" />
     <ClInclude Include="..\src\my_viewer.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
